    # The deletion views have been improved :
        - The dependencies issues have now a better display.
          Example: entities are displayed as HTML links.
        - A Property type cannot be deleted if it is used by :
            - A property (i.e. one entity is tagged at least).
            - A RelationType (as a constraint).
            - A condition of Filter.
        - A Relationship type cannot be deleted if it is used by :
            - A Relationship (i.e. 2 entities are linked at least).
            - A condition of Filter.
        - A CustomField cannot be deleted if it is used by :
            - A condition of Filter.
            - A condition of Workflow.
    # The Currencies have now a "Is default?" field to chose the Currency
      which is pre-selected in forms (Invoices, Quotes, Opportunities...).
    # NotificationBox : The elapsed time from message creation is now updated each minute.
    # Apps :
        * Activities :
            - The JavaScript component FullCalendar has been upgraded to the version "6.1.15"
            - Improve CSS of the calendar sidebar and make it sticky.
            - New 'My Calendar' brick is now available for the home page-view.
            - In the calendar configuration, the visible hours range is added. Can be different from "business hours" that
              are setting constraints to activities.
        * Creme_config :
            - The buttons configuration can now be customised per role.
            - The property types have now a field "description" (it can be empty of course).
            - In the bricks configuration, default configuration is used as initial value when it's relevant
              (instead of starting with an empty configuration).
            - In the relation types configuration, you can now edit the "minimal display" value for standard types.
            - A view which displays all "FileRefs" (temporary files) has been added; it's only available for staff users.